--- a/index.html
+++ b/index.html
@@ -18,10 +18,19 @@
 
 <body>
   
+  <div class="card">
+    <div class="card-header">
+      Most Recent Covid-19 News from DFW
+    </div>
+    <div class="card-body" id="mainCardContents">
+    </div>
+  </div>
+
+
 
     <!-- JavaScript -->
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
   <body>
     
