added margin between cards in style.css file. changed a few div's to section or article tags

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
 <body>
   
-  <div class="card">
-    <div class="card-header">
-      Most Recent Covid-19 News from DFW
-    </div>
+  <section class="card">
+    <h3 class="card-header" style="text-align: center;">
+      Recent Coronavirus News from DFW
+    </h3>
     <div class="card-body" id="mainCardContents">
     </div>
-  </div>
+  </section>
 
 
 
