--- a/index.html
+++ b/index.html
@@ -18,11 +18,6 @@
 
 <body>
   
-
-  
-
-
-
     <!-- JavaScript -->
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -56,7 +51,42 @@
       
             <div class="col">
               <div class="row">
-                <div class="col">Covid Tips Go here</div>
+                <div class="col">
+                  <section class="card">
+                    <h3 class="card-header" style="text-align: center;">
+                      How to Protect Yourself & Others
+                    </h3>
+                    <div class="row">
+                      <div class="col-4">
+                        <div class="list-group" id="list-tab" role="tablist">
+                          <a class="list-group-item list-group-item-action active" id="list-know-list" data-toggle="list" href="#list-know" role="tab" aria-controls="know">Know How it Spreads</a>
+                          <a class="list-group-item list-group-item-action" id="list-wash-list" data-toggle="list" href="#list-wash" role="tab" aria-controls="wash">Wash Hands Often</a>
+                          <a class="list-group-item list-group-item-action" id="list-contact-list" data-toggle="list" href="#list-contact" role="tab" aria-controls="contact">Avoid Close Contact</a>
+                          <a class="list-group-item list-group-item-action" id="list-mask-list" data-toggle="list" href="#list-mask" role="tab" aria-controls="mask">Cover Your Mouth and Nose</a>
+                          <a class="list-group-item list-group-item-action" id="list-cough-list" data-toggle="list" href="#list-cough" role="tab" aria-controls="cough">Cover Coughs and Sneezes</a>
+                          <a class="list-group-item list-group-item-action" id="list-clean-list" data-toggle="list" href="#list-clean" role="tab" aria-controls="clean">Clean and Disinfect</a>
+                          <a class="list-group-item list-group-item-action" id="list-update-list" data-toggle="list" href="#list-update" role="tab" aria-controls="update">Stay Up to Date</a>
+                        </div>
+                      </div>
+                      <div class="col-8">
+                        <div class="tab-content" id="nav-tabContent">
+                          <div class="tab-pane fade show active" id="list-know" role="tabpanel" aria-labelledby="list-know-list">The best way to prevent illness is to avoid being exposed to this virus.
+                            The virus is thought to spread mainly from person-to-person.
+                            Between people who are in close contact with one another (within about 6 feet).
+                            Through respiratory droplets produced when an infected person coughs, sneezes or talks.
+                            These droplets can land in the mouths or noses of people who are nearby or possibly be inhaled into the lungs.
+                            Some recent studies have suggested that COVID-19 may be spread by people who are not showing symptoms.</div>
+                          <div class="tab-pane fade" id="list-wash" role="tabpanel" aria-labelledby="list-wash-list">2</div>
+                          <div class="tab-pane fade" id="list-contact" role="tabpanel" aria-labelledby="list-contact-list">3</div>
+                          <div class="tab-pane fade" id="list-mask" role="tabpanel" aria-labelledby="list-mask-list">4</div>
+                          <div class="tab-pane fade" id="list-cough" role="tabpanel" aria-labelledby="list-cough-list">5</div>
+                          <div class="tab-pane fade" id="list-clean" role="tabpanel" aria-labelledby="list-clean-list">6</div>
+                          <div class="tab-pane fade" id="list-update" role="tabpanel" aria-labelledby="list-update-list">7</div>
+                        </div>
+                      </div>
+                    </div>
+                  </section>
+                </div>
               </div>
               <div class="row">
                 <div class="col">Drop Down goes here</div>
