Fixed dropdown and display list

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               </div>
 
               <div class="card" style="width: 18rem;">
-                <ul class="list-group list-group-flush">
+                <ul id="testList" class="list-group list-group-flush">
                   <!-- <li class="list-group-item">Cras justo odio</li> -->
 
                 </ul>
