added card around testing locations div

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="col">
           <div class="row">
             <div class="col">
-              <!-- card for the covid 19 helpful tips and resouces -->
+              <!-- #### card for the covid 19 helpful tips and resouces -->
               <section class="card">
                 <!-- header for tips and resources card -->
                 <h3 class="card-header" style="text-align: center;">
@@ -153,29 +153,37 @@
                   </div>
                 </div>
               </section>
+              <!-- ^^^^ Last closing element for the covid tips  -->
             </div>
           </div>
           <!-- #### row for the drop down and address display -->
+
           <div class="row">
             <div class="col">
-              <div class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2"
-                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Dropdown
-                </button>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                  <!-- <button class="dropdown-item" type="button">Action</button> -->
+              <section class="card">
+                <h3 class="card-header" style="text-align: center;">
+                  Texas Testing Facilities
+                </h3>
+                <div class="card-body" id="testing" style="min-height:35em;">
+                  <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2"
+                      data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                      Dropdown
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+                      <!-- <button class="dropdown-item" type="button">Action</button> -->
+                    </div>
+                  </div>
+                  <div class="card" style="width: 18rem;">
+                    <ul id="testList" class="list-group list-group-flush">
+                      <!-- <li class="list-group-item">Cras justo odio</li> -->
+                    </ul>
+                  </div>
                 </div>
-              </div>
-
-              <div class="card" style="width: 18rem;">
-                <ul id="testList" class="list-group list-group-flush">
-                  <!-- <li class="list-group-item">Cras justo odio</li> -->
-                </ul>
-              </div>
+              </section>
             </div>
           </div>
-          <!-- %%% Last closing div for address dropdown -->
+          <!-- ^^^^ Last closing element for address dropdown -->
         </div>
 
         <!-- #### column for the article generation -->
@@ -191,7 +199,7 @@
             </div>
           </section>
         </div>
-        <!-- %%% Last closing div for article generation -->
+        <!-- ^^^^ Last closing element for article generation -->
       </section>
 
     </main>
