--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </div>
                   </div>
                   <!-- content for each topic -->
-                  <div class="col-8">
+                  <div class="col-8 pr-5">
                     <div class="tab-content" id="nav-tabContent">
                       <div class="tab-pane fade show active" id="list-know" role="tabpanel"
                         aria-labelledby="list-know-list">
