--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
 
     <div>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
         <marquee> <span class="navbar-brand mb-1 h1">
             <h1 class="display-1">COVID-19 UPDATES</h1>
           </span> </marquee>
@@ -35,7 +35,7 @@
     <main class="container">
       <!-- Parent Row -->
       <section class="row justify-content-around">
-        <div class="col">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
           <div class="row">
             <div class="col">
               <!-- #### card for the covid 19 helpful tips and resouces -->
@@ -158,7 +158,7 @@
           </div>
           <!-- #### row for the drop down and address display -->
 
-          <div class="row">
+          <div class="row justify-content-center">
             <div class="col">
               <section class="card">
                 <h3 class="card-header" style="text-align: center;">
@@ -166,15 +166,15 @@
                 </h3>
                 <div class="card-body" id="testing" style="min-height:35em;">
                   <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2"
+                    <button class="btn btn-secondary btn-lg dropdown-toggle pl-5 pr-5" type="button" id="dropdownMenu2"
                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Dropdown
+                      Choose a City From List
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
                       <!-- <button class="dropdown-item" type="button">Action</button> -->
                     </div>
                   </div>
-                  <div class="card" style="width: 18rem;">
+                  <div class="card" style="width: 20rem;">
                     <ul id="testList" class="list-group list-group-flush">
                       <!-- <li class="list-group-item">Cras justo odio</li> -->
                     </ul>
