increase responsiveness of page

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           </div>
           <!-- #### row for the drop down and address display -->
 
-          <div class="row justify-content-center">
+          <div class="row justify-content-center mt-3">
             <div class="col">
               <section class="card">
                 <h3 class="card-header" style="text-align: center;">
@@ -187,7 +187,7 @@
         </div>
 
         <!-- #### column for the article generation -->
-        <div class="col">
+        <div class="col mt-3 mt-sm-3 mt-md-3 mt-lg-0 mt-xl-0">
           <!-- card for the articles -->
           <section class="card">
             <!-- article card header -->
