--- a/index.html
+++ b/index.html
@@ -13,26 +13,33 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  
+  <!-- Animation Library  -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
 </head>
 
 <body>
-  <!-- JavaScript -->
+</head>
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  </head>
+<body class="bg-color">
 
-  <body>
-
-    <div>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-5">
-        <marquee> <span class="navbar-brand mb-1 h1">
-            <h1 class="display-1">COVID-19 UPDATES</h1>
-          </span> </marquee>
-    </div>
+  
+  
+  <div>
+    <nav class="navbar navbar-expand-lg  mb-5">
+  
+      <h1 class="ml1">
+        <span class="text-wrapper">
+          <span class="line line1"></span>
+          <span class="letters"> COVID-19 Updates</span>
+          <span class="line line2"></span>
+        </span>
+      </h1>
+</div>
+  
     <!-- main container -->
-    <main class="container">
+    <main id="toTop" class="container">
       <!-- Parent Row -->
       <section class="row justify-content-around">
         <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
@@ -49,20 +56,20 @@
                   <div class="col-4">
                     <div class="list-group" id="list-tab" role="tablist">
                       <a class="list-group-item list-group-item-action active" id="list-know-list" data-toggle="list"
-                        href="#list-know" role="tab" aria-controls="know">Know How it Spreads</a>
+                      href="#list-know" role="tab" aria-controls="know">Know How it Spreads</a>
                       <a class="list-group-item list-group-item-action" id="list-wash-list" data-toggle="list"
-                        href="#list-wash" role="tab" aria-controls="wash">Wash Hands Often</a>
+                      href="#list-wash" role="tab" aria-controls="wash">Wash Hands Often</a>
                       <a class="list-group-item list-group-item-action" id="list-contact-list" data-toggle="list"
                         href="#list-contact" role="tab" aria-controls="contact">Avoid Close Contact</a>
-                      <a class="list-group-item list-group-item-action" id="list-mask-list" data-toggle="list"
+                        <a class="list-group-item list-group-item-action" id="list-mask-list" data-toggle="list"
                         href="#list-mask" role="tab" aria-controls="mask">Cover Your Mouth and Nose</a>
-                      <a class="list-group-item list-group-item-action" id="list-cough-list" data-toggle="list"
+                        <a class="list-group-item list-group-item-action" id="list-cough-list" data-toggle="list"
                         href="#list-cough" role="tab" aria-controls="cough">Cover Coughs and Sneezes</a>
                       <a class="list-group-item list-group-item-action" id="list-clean-list" data-toggle="list"
-                        href="#list-clean" role="tab" aria-controls="clean">Clean and Disinfect</a>
+                      href="#list-clean" role="tab" aria-controls="clean">Clean and Disinfect</a>
                       <a class="list-group-item list-group-item-action" id="list-update-list" data-toggle="list"
                         href="#list-update" role="tab" aria-controls="update">Stay Up to Date</a>
-                    </div>
+                      </div>
                   </div>
                   <!-- content for each topic -->
                   <div class="col-8 pr-5">
@@ -81,14 +88,14 @@
                           <li>Some recent studies have suggested that COVID-19 may be spread by people who are not
                             showing
                             symptoms.</li>
-                        </ul>
+                          </ul>
                       </div>
                       <div class="tab-pane fade" id="list-wash" role="tabpanel" aria-labelledby="list-wash-list">
                         <p>Wash your hands often</p>
                         <ul>
                           <li>Wash your hands often with soap and water for at least 20 seconds especially after you
                             have been in a public place, or after blowing your nose, coughing, or sneezing.</li>
-                          <li>If soap and water are not readily available, use a hand sanitizer that contains at least
+                            <li>If soap and water are not readily available, use a hand sanitizer that contains at least
                             60% alcohol. Cover all surfaces of your hands and rub them together until they feel dry.
                           </li>
                           <li>Avoid touching your eyes, nose, and mouth with unwashed hands.</li>
@@ -115,7 +122,7 @@
                           <li>The cloth face cover is meant to protect other people in case you are infected.</li>
                           <li>Continue to keep about 6 feet between yourself and others. The cloth face cover is not a
                             substitute for social distancing.</li>
-                        </ul>
+                          </ul>
                       </div>
                       <div class="tab-pane fade" id="list-cough" role="tabpanel" aria-labelledby="list-cough-list">
                         <p>Cover coughs and sneezes</p>
@@ -145,7 +152,7 @@
                         <ul>
                           <li><a href="https://www.cdc.gov/coronavirus/2019-nCoV/index.html" target="blank">CDC Covid-19
                               Website</a></li>
-                          <li><a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019"
+                              <li><a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019"
                               target="blank">WHO Covid-19 Website</a></li>
                         </ul>
                       </div>
@@ -157,7 +164,7 @@
             </div>
           </div>
           <!-- #### row for the drop down and address display -->
-
+          
           <div class="row justify-content-center mt-3">
             <div class="col">
               <section class="card">
@@ -204,12 +211,80 @@
 
     </main>
 
+
+<!-- Footer -->
+<footer class="site-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-6">
+        <h6>About</h6>
+        <p class="text-justify">
+          Using an open API source from [newsapi.org] we were able to set up an article search using local DFW news sources. Search terms were included 
+          in the queryUrl to filter in articles related to the covid-19 pandemic and the 5 most recent are displayed in the application. The article display 
+          shows the viewer the title of the article, a brief description,the source of the article, as well as a link to the source that opens up in a new browser tab.
+        </p>
+      </div>
+
+      <div class="col-xs-6 col-md-3">
+        <h6>Technology Used</h6>
+        <ul class="footer-links">
+          <li><a href="">jQuery</a></li>
+          <li><a href="">Bootstrap</a></li>
+          <li><a href="">GitHub</a></li>
+          <li><a href="">JavaScript</a></li>
+          <li><a href="">anime.js</a></li>
+          <li><a href="">HTML/CSS</a></li>
+        </ul>
+      </div>
+
+      <div class="col-xs-6 col-md-3">
+        <h6>Quick Links</h6>
+        <ul class="footer-links">
+          <li><a href="http://scanfcode.com/about/">How to Protect Yourself & Others</a></li>
+          <li><a href="http://scanfcode.com/contact/">Texas Testing Facilities</a></li>
+          <li><a href="http://scanfcode.com/contribute-at-scanfcode/">Recent Coronavirus News from DFW</a></li>
+        </ul>
+      </div>
+    </div>
+    <hr>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-sm-6 col-xs-12">
+        <p class="copyright-text">Copyright &copy; 2020
+        </p>
+      </div>
+
+      <div class="col-md-4 col-sm-6 col-xs-12">
+        <ul class="social-icons">
+          <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+          <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+          <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
+          <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>   
+        </ul>
+      </div>
+    </div>
+  </div>
+</footer>
+</footer>
+
     <!-- Optional Moment File -->
     <script src="moment.js"></script>
-    <!-- Optional JavaScript -->
+  
+    <!-- JavaScript -->
+    
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+<!-- Auto Scroll -->
+
+
+
 
     <script src="script.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
       crossorigin="anonymous"></script>
